--- a/.env_dist
+++ b/.env_dist
@@ -10,3 +10,6 @@ DC_CONFIG_URL=https://raw.githubusercontent.com/buzzkc/dc-config/refs/heads/main
 
 # Home Assistant Settings
 TZ=America/Chicago
+
+# ESPHome Settings
+ESPHOME_PORT=6052
