--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,19 @@ services:
     privileged: true
     env_file:
       - ./.env
+   
+  esphome:
+    image: esphome/esphome:latest
+    container_name: esphome
+    depends_on:
+      - homeassistant
+    ports:
+      - "${ESPHOME_PORT}:6052"
+    volumes:
+      - ./esphome:/config
+    restart: unless-stopped
+    env_file:
+      - ./.env
 
 networks:
   default:
