--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,35 +2,50 @@ server {
     listen 80;
     server_name _;
 
-    # Default homepage
-    location / {
+    # Default dashboard
+    location = / {
         root /usr/share/nginx/html;
         index index.html;
     }
 
-    # Proxy routes
+    # --- Node-RED ---
     location /nodered/ {
         proxy_pass http://nodered:1880/;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        rewrite ^/nodered/(.*)$ /$1 break;
     }
 
+    # --- Home Assistant ---
     location /homeassistant/ {
         proxy_pass http://homeassistant:8123/;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        rewrite ^/homeassistant/(.*)$ /$1 break;
     }
 
+    # --- ESPHome ---
     location /esphome/ {
         proxy_pass http://esphome:6052/;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        rewrite ^/esphome/(.*)$ /$1 break;
     }
-	
-	location /mqttx/ {
+
+    # --- MQTTX Web ---
+    location /mqttx/ {
         proxy_pass http://mqttx:8083/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        rewrite ^/mqttx/(.*)$ /$1 break;
     }
-
 }
