--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name _;
 
     # Default dashboard
-    location = / {
+    location / {
         root /usr/share/nginx/html;
         index index.html;
     }
