Web page config update

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,4 +7,8 @@ server {
         root /usr/share/nginx/html;
         index index.html;
     }
+	location /json-editor {
+        root /usr/share/nginx/html/json-editor;
+        index index.html;
+    }
 }
