Web page config update

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,13 +2,11 @@ server {
     listen 80;
     server_name _;
 
-    # Default dashboard
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-    }
-	location /json-editor {
-        root /usr/share/nginx/html/json-editor;
-        index index.html;
-    }
+	root /usr/share/nginx/html; # Your main root directory
+	index index.html index.php; # Include index.html
+
+	location /json-editor/ {
+		# If you want a different index file for this subfolder
+		# index custom_index.html;
+	}
 }
