Web page config update

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,5 +8,6 @@ server {
 	location /json-editor/ {
 		# If you want a different index file for this subfolder
 		# index custom_index.html;
+		 try_files $uri $uri/ /json-editor/index.html =404;
 	}
 }
