--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx/index.html:/usr/share/nginx/html/index.html:ro
+      - ./nginx:/usr/share/nginx/html
     depends_on:
       - nodered
       - homeassistant
