--- a/dc-s31-tool-sensor.yaml
+++ b/dc-s31-tool-sensor.yaml
@@ -19,7 +19,7 @@ substitutions:
 
   # https://esphome.io/components/esphome.html#esphome-creators-project
   project_name: buzzkc.dust_collector_control
-  project_ver_num: "1.0.1"
+  project_ver_num: "1.0.2"
   project_ver_let: t
 
   sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml
@@ -44,7 +44,7 @@ esp8266:
 # https://esphome.io/components/esphome.html
 esphome:
 
-  name: $name
+  name: $device_name
   friendly_name: $friendly_name
   project:
     name: $project_name
