--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ services:
   mosquitto:
     image: eclipse-mosquitto:2.0
     container_name: mosquitto
-    ports:
-      - "1883:1883"
-      - "9001:9001"
+    network_mode: host
     volumes:
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/data:/mosquitto/data
@@ -16,10 +14,9 @@ services:
   nodered:
     image: nodered/node-red:latest
     container_name: nodered
+    network_mode: host
     depends_on:
       - mosquitto
-    ports:
-      - "1880:1880"
     volumes:
       - ./nodered:/data
     restart: unless-stopped
@@ -29,10 +26,9 @@ services:
   homeassistant:
     image: ghcr.io/home-assistant/home-assistant:stable
     container_name: homeassistant
+    network_mode: host
     depends_on:
       - mosquitto
-    ports:
-      - "8123:8123"
     volumes:
       - ./homeassistant:/config
     restart: unless-stopped
@@ -44,11 +40,9 @@ services:
   esphome:
     image: esphome/esphome:latest
     container_name: esphome
+    network_mode: host
     depends_on:
       - homeassistant
-    ports:
-      - "6052:6052"
-      - "5353:5353/udp" # mDNS
     volumes:
       - ./esphome:/config
     restart: unless-stopped
@@ -58,18 +52,16 @@ services:
   mqtt-explorer:
     image: smeagolworms4/mqtt-explorer
     container_name: mqtt_explorer_web
+    network_mode: host
     restart: unless-stopped
-    ports:
-      - "8083:4000"   # internal port 8080 mapped to host 8083
     depends_on:
       - mosquitto
       
   nginx:
     image: nginx:latest
     container_name: nginx
+    network_mode: host
     restart: unless-stopped
-    ports:
-      - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginx:/usr/share/nginx/html
