--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     image: eclipse-mosquitto:2.0
     container_name: mosquitto
     network_mode: host
+    ports:
+      - "1883:1883"
+      - "9001:9001"
     volumes:
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/data:/mosquitto/data
@@ -14,28 +17,30 @@ services:
   nodered:
     image: nodered/node-red:latest
     container_name: nodered
-    network_mode: host
     depends_on:
       - mosquitto
+    ports:
+      - "1880:1880"
     volumes:
       - ./nodered:/data
     restart: unless-stopped
     env_file:
       - ./.env
 
-  homeassistant:
-    image: ghcr.io/home-assistant/home-assistant:stable
-    container_name: homeassistant
-    network_mode: host
-    depends_on:
-      - mosquitto
-    volumes:
-      - ./homeassistant:/config
-    restart: unless-stopped
-    privileged: true
-    
-    env_file:
-      - ./.env
+  #homeassistant:
+  #  image: ghcr.io/home-assistant/home-assistant:stable
+  #  container_name: homeassistant
+  #  depends_on:
+  #    - mosquitto
+  #  ports:
+  #    - "8123:8123"
+  #  volumes:
+  #    - ./homeassistant:/config
+  #  restart: unless-stopped
+  #  privileged: true
+  #  
+  #  env_file:
+  #    - ./.env
       
   esphome:
     image: esphome/esphome:latest
@@ -43,6 +48,9 @@ services:
     network_mode: host
     depends_on:
       - homeassistant
+    ports:
+      - "6052:6052"
+      - "5353:5353/udp" # mDNS
     volumes:
       - ./esphome:/config
     restart: unless-stopped
@@ -52,16 +60,18 @@ services:
   mqtt-explorer:
     image: smeagolworms4/mqtt-explorer
     container_name: mqtt_explorer_web
-    network_mode: host
     restart: unless-stopped
+    ports:
+      - "8083:4000"   # internal port 8080 mapped to host 8083
     depends_on:
       - mosquitto
       
   nginx:
     image: nginx:latest
     container_name: nginx
-    network_mode: host
     restart: unless-stopped
+    ports:
+      - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginx:/usr/share/nginx/html
