--- a/dc-s31-tool-sensor.yaml
+++ b/dc-s31-tool-sensor.yaml
@@ -7,7 +7,7 @@ substitutions:
   #
   #
 
-  device_name: dc-s31-tool-sensor         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
+  name: dc-s31-tool-sensor         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
                                # **** USE DASHES (-) INSTEAD OF SPACES OR UNDERSCORE (_).  USE ONLY LOWER CASE LETTERS.     ****
 
   friendly_name: Dust Collector Tool Sensor     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
@@ -45,7 +45,7 @@ esp8266:
 # https://esphome.io/components/esphome.html
 esphome:
 
-  name: $device_name
+  name: $name
   friendly_name: $friendly_name
   project:
     name: $project_name
@@ -117,14 +117,14 @@ globals:
 mqtt:
   broker: ${mqtt_broker}  # 🔹 Replace with your MQTT broker IP or hostname
   discovery: false
-  topic_prefix: ${mqtt_prefix}/${device_name}
+  topic_prefix: ${mqtt_prefix}/${name}
   reboot_timeout: 0s
   birth_message:
-    topic: ${mqtt_prefix}/${device_name}/birth
+    topic: ${mqtt_prefix}/${name}/birth
     payload: "{\"type\":\"${device_type}\", \"state\":\"birth\"}"
     qos: 2
   will_message:
-    topic: ${mqtt_prefix}/${device_name}/will
+    topic: ${mqtt_prefix}/${name}/will
     payload: "{\"type\":\"${device_type}\", \"state\":\"will\"}"
     qos: 2
 
@@ -135,7 +135,7 @@ mqtt:
       - script.stop: led_wait_heartbeat
       - script.execute: led_heartbeat
       - mqtt.publish:
-          topic: ${mqtt_prefix}/${device_name}/status
+          topic: ${mqtt_prefix}/${name}/status
           payload: '{"state":"online"}'
 
   # Send MQTT message when device goes offline
@@ -145,11 +145,11 @@ mqtt:
       - script.stop: led_heartbeat
       - script.execute: led_wait_heartbeat
       - mqtt.publish:
-          topic: ${mqtt_prefix}/${device_name}/status
+          topic: ${mqtt_prefix}/${name}/status
           payload: '{"state":"offline"}'
 
   on_json_message:
-    - topic: ${mqtt_prefix}/${device_name}/config
+    - topic: ${mqtt_prefix}/${name}/config
       then:
         - lambda: |-
             if (x["currentTrigger"]) {
@@ -199,7 +199,7 @@ binary_sensor:
                           return (id(off_routine_running) == false) && id(relay).state;
                   then:
                     - mqtt.publish:
-                        topic: ${mqtt_prefix}/${device_name}
+                        topic: ${mqtt_prefix}/${name}
                         payload: !lambda | 
                           char buffer[64];
                           snprintf(buffer, sizeof(buffer), "{\"type\":\"${device_type}\", \"status\":\"off\", \"current\":%.2f}", id(current_raw).state);
@@ -213,7 +213,7 @@ binary_sensor:
                     - lambda: 'id(off_routine_running) = false;'
                     - lambda: 'id(relay_trigger_source) = "button";'
                     - mqtt.publish:
-                        topic: ${mqtt_prefix}/${device_name}
+                        topic: ${mqtt_prefix}/${name}
                         payload: !lambda | 
                           char buffer[64];
                           snprintf(buffer, sizeof(buffer), "{\"type\":\"${device_type}\", \"status\":\"on\", \"current\":%.2f}", id(current_raw).state);
@@ -228,7 +228,7 @@ binary_sensor:
             topic: ${mqtt_prefix}/lock/cmd
             payload: !lambda | 
               char buffer[64];
-              snprintf(buffer, sizeof(buffer), "{\"name\": \"${device_name}\", \"command\":%s}", (id(relay_1).state)?"\"unlock\"":"\"lock\"");
+              snprintf(buffer, sizeof(buffer), "{\"name\": \"${name}\", \"command\":%s}", (id(relay_1).state)?"\"unlock\"":"\"lock\"");
               return std::string(buffer);
 
   - platform: status
@@ -258,7 +258,7 @@ sensor:
                 - lambda: 'id(relay_trigger_source) = "sensor";'
                 - logger.log: "Current above 4A, relay triggered by current sensor"
                 - mqtt.publish:
-                    topic: ${mqtt_prefix}/${device_name}
+                    topic: ${mqtt_prefix}/${name}
                     payload: !lambda | 
                       char buffer[64];
                       snprintf(buffer, sizeof(buffer), "{\"type\":\"${device_type}\", \"status\":\"on\", \"current\":%.2f}", id(current_raw).state);
@@ -274,7 +274,7 @@ sensor:
               then:
                 - logger.log: "Current dropped below 4A, relay turning off (sensor-triggered)"
                 - mqtt.publish:
-                    topic: ${mqtt_prefix}/${device_name}
+                    topic: ${mqtt_prefix}/${name}
                     payload: !lambda | 
                       char buffer[64];
                       snprintf(buffer, sizeof(buffer), "{\"type\":\"${device_type}\", \"status\":\"off\", \"current\":%.2f}", id(current_raw).state);
@@ -373,7 +373,7 @@ script:
             - lambda: 'id(relay_trigger_source) = "sensor";'
             - logger.log: "Current above 4A, relay triggered by current sensor"
             - mqtt.publish:
-                topic: ${mqtt_prefix}/${device_name}
+                topic: ${mqtt_prefix}/${name}
                 payload: !lambda | 
                   char buffer[64];
                   snprintf(buffer, sizeof(buffer), "{\"type\":\"${device_type}\", \"status\":\"on\", \"current\":%.2f}", id(current_raw).state);
@@ -391,7 +391,7 @@ script:
           then:
             - logger.log: "Current dropped below 4A, relay turning off (sensor-triggered)"
             - mqtt.publish:
-                topic: ${mqtt_prefix}/${device_name}
+                topic: ${mqtt_prefix}/${name}
                 payload: !lambda | 
                   char buffer[64];
                   snprintf(buffer, sizeof(buffer), "{\"type\":\"${device_type}\", \"status\":\"off\", \"current\":%.2f}", id(current_raw).state);
@@ -434,7 +434,7 @@ interval:
   - interval: 30s
     then:
       - mqtt.publish:
-          topic: ${mqtt_prefix}/${device_name}/update
+          topic: ${mqtt_prefix}/${name}/update
           payload: !lambda | 
             char buffer[64];
             snprintf(buffer, sizeof(buffer), "{\"type\":\"${device_type}\" ,\"state\":\"%s\", \"current\":%.2f}",
