--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     volumes:
       - ./nodered:/data
     restart: unless-stopped
+    privileged: true
     env_file:
       - ./.env
 
