--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       - ./nodered:/data
     restart: unless-stopped
-    privileged: true
+    user: root
     env_file:
       - ./.env
 
