--- a/dc-s31-vac-control.yaml
+++ b/dc-s31-vac-control.yaml
@@ -22,7 +22,7 @@ substitutions:
   project_ver_num: "1.0.1"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-vac-control.yaml
+  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-vac-control.yaml@main
 
   sub_ota_num_attempts: '15'
   
