--- a/dc-vac-control-min.yaml
+++ b/dc-vac-control-min.yaml
@@ -22,7 +22,7 @@ substitutions:
   project_ver_num: "1.0.1"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-vac-control.yaml
+  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-vac-control.yaml@main
 
   sub_ota_num_attempts: '15'
   
@@ -36,6 +36,10 @@ substitutions:
   switch_pin: 0 # Push button
   current_pin: 0 # A0
 
+# https://esphome.io/components/esp8266.html
+esp8266:
+  board: esp12e
+  early_pin_init: false
 
 # https://esphome.io/components/esphome.html
 esphome:
