--- a/dc-s31-tool-sensor.yaml
+++ b/dc-s31-tool-sensor.yaml
@@ -19,10 +19,10 @@ substitutions:
 
   # https://esphome.io/components/esphome.html#esphome-creators-project
   project_name: buzzkc.dust_collector_control
-  project_ver_num: "1.0.7"
+  project_ver_num: "1.0.8"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml
+  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml@main
 
   sub_ota_num_attempts: '15'
   
