--- a/dc-tool-sensor-min.yaml
+++ b/dc-tool-sensor-min.yaml
@@ -19,7 +19,7 @@ substitutions:
   project_ver_num: "1.0.0"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml
+  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml@main
   
   mqtt_broker: "0.0.0.0"
   mqtt_prefix: "buzzkc/dc" 
