--- a/dc-esp32-gate-min.yaml
+++ b/dc-esp32-gate-min.yaml
@@ -19,7 +19,7 @@ substitutions:
   project_ver_num: "1.0.1"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/gate_update.yaml
+  sub_import_url: github://buzzkc/docker-dust-collection/gate-update.yaml@main
   
   mqtt_broker: "0.0.0.0"
   mqtt_prefix: "buzzkc/dc" 
