--- a/dc-esp32-gate-min.yaml
+++ b/dc-esp32-gate-min.yaml
@@ -7,7 +7,7 @@ substitutions:
   #
   #
 
-  device_name: dc-esp32-gate         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
+  name: dc-esp32-gate         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
                                # **** USE DASHES (-) INSTEAD OF SPACES OR UNDERSCORE (_).  USE ONLY LOWER CASE LETTERS.     ****
 
   friendly_name: ESP32 Gate Controller     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
@@ -23,6 +23,7 @@ substitutions:
   
   mqtt_broker: "0.0.0.0"
   mqtt_prefix: "buzzkc/dc" 
+  device_name: $name
   device_type: "gate"
   #The following pins may be device specific, lookup what you are using: https://randomnerdtutorials.com/esp32-pinout-reference-gpios/
   led_pin: 2 # Push button LED 
@@ -38,8 +39,7 @@ esp32:
 
 # https://esphome.io/components/esphome.html
 esphome:
-
-  name: $device_name
+  name: $name
   friendly_name: $friendly_name
   # Automatically add the mac address to the name
   # so you can use a single firmware for all devices
