remove name from esphome gate update yaml

--- a/dc-esp32-gate.yaml
+++ b/dc-esp32-gate.yaml
@@ -10,7 +10,7 @@ substitutions:
   #device_name: dc-esp32-gate         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
                                # **** USE DASHES (-) INSTEAD OF SPACES OR UNDERSCORE (_).  USE ONLY LOWER CASE LETTERS.     ****
 
-  friendly_name: ESP32 Gate Controller     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
+  #friendly_name: ESP32 Gate Controller     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
 
   #disable_entities:  "true"    # set to "false" to have all entities show up in Home Assistant automatically
   #disable_webserver: "false"   # set to "true" to disable webserver listening on port 80.
@@ -33,8 +33,8 @@ substitutions:
   servo2_pin: 23
 
 esphome:
-  name: ${name}
-  friendly_name: ${friendly_name}
+  #name: ${name}
+  #friendly_name: ${friendly_name}
   project:
     name: $project_name
     version: $project_ver_num($project_ver_let)
