update all to use variable in package, set project version based on type, all using v1 tag

--- a/gate-update.yaml
+++ b/gate-update.yaml
@@ -6,8 +6,8 @@ packages:
   remote_package_files:
     url: http://github.com/buzzkc/docker-dust-collection
     files: 
-      - path: dc-esp32-gate.yaml  # optional; if not specified, all files will be included
+      - path: dc-esp32-gate.yaml  
         vars:
-          device_name: ${name}
+          device_name: ${name} #override with current sensors name
     ref: main  # optional
     refresh: 1d  # optional
