--- a/dc-esp32-gate-min.yaml
+++ b/dc-esp32-gate-min.yaml
@@ -17,9 +17,9 @@ substitutions:
   # https://esphome.io/components/esphome.html#esphome-creators-project
   project_name: buzzkc.dust_collector_control
   project_ver_num: "1.0.1"
-  project_ver_let: t
+  project_ver_let: g
 
-  sub_import_url: github://buzzkc/docker-dust-collection/gate-update.yaml@main
+  sub_import_url: github://buzzkc/docker-dust-collection/gate-update.yaml@v1
   
   mqtt_broker: "0.0.0.0"
   mqtt_prefix: "buzzkc/dc" 
