--- a/dc-esp32-gate.yaml
+++ b/dc-esp32-gate.yaml
@@ -19,10 +19,10 @@ substitutions:
 
   # https://esphome.io/components/esphome.html#esphome-creators-project
   project_name: buzzkc.dust_collector_control
-  project_ver_num: "1.0.3"
-  project_ver_let: t
+  project_ver_num: "1.0.4"
+  project_ver_let: g
 
-  sub_import_url: github://buzzkc/docker-dust-collection/gate-update.yaml@main
+  sub_import_url: github://buzzkc/docker-dust-collection/gate-update.yaml@v1
 
   sub_ota_num_attempts: '15'
   device_name: ${name}
