--- a/dc-s31-tool-sensor.yaml
+++ b/dc-s31-tool-sensor.yaml
@@ -7,10 +7,10 @@ substitutions:
   #
   #
 
-  device_name: dc-s31-tool-sensor         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
+  #device_name: dc-s31-tool-sensor         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
                                # **** USE DASHES (-) INSTEAD OF SPACES OR UNDERSCORE (_).  USE ONLY LOWER CASE LETTERS.     ****
 
-  friendly_name: Dust Collector Tool Sensor     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
+  #friendly_name: Dust Collector Tool Sensor     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
 
   #disable_entities:  "true"    # set to "false" to have all entities show up in Home Assistant automatically
   #disable_webserver: "false"   # set to "true" to disable webserver listening on port 80.
@@ -19,10 +19,10 @@ substitutions:
 
   # https://esphome.io/components/esphome.html#esphome-creators-project
   project_name: buzzkc.dust_collector_control
-  project_ver_num: "1.0.8"
+  project_ver_num: "1.0.9"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml@main
+  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml@v1
 
   sub_ota_num_attempts: '15'
   
@@ -46,8 +46,8 @@ esp8266:
 # https://esphome.io/components/esphome.html
 esphome:
 
-  name: $device_name
-  friendly_name: $friendly_name
+  #name: $device_name
+  #friendly_name: $friendly_name
   project:
     name: $project_name
     version: $project_ver_num($project_ver_let)
