--- a/dc-s31-vac-control.yaml
+++ b/dc-s31-vac-control.yaml
@@ -7,10 +7,10 @@ substitutions:
   #
   #
 
-  device_name: dc-s31-vac-control         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
+  #device_name: dc-s31-vac-control         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
                                # **** USE DASHES (-) INSTEAD OF SPACES OR UNDERSCORE (_).  USE ONLY LOWER CASE LETTERS.     ****
 
-  friendly_name: Dust Collector Vac Control     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
+  #friendly_name: Dust Collector Vac Control     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
 
   #disable_entities:  "true"    # set to "false" to have all entities show up in Home Assistant automatically
   #disable_webserver: "false"   # set to "true" to disable webserver listening on port 80.
@@ -20,7 +20,7 @@ substitutions:
   # https://esphome.io/components/esphome.html#esphome-creators-project
   project_name: buzzkc.dust_collector_vac_control
   project_ver_num: "1.0.1"
-  project_ver_let: t
+  project_ver_let: v
 
   sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-vac-control.yaml@main
 
@@ -46,8 +46,8 @@ esp8266:
 # https://esphome.io/components/esphome.html
 esphome:
 
-  name: $device_name
-  friendly_name: $friendly_name
+  #name: $device_name
+  #friendly_name: $friendly_name
   project:
     name: $project_name
     version: $project_ver_num($project_ver_let)
