--- a/dc-tool-sensor-min.yaml
+++ b/dc-tool-sensor-min.yaml
@@ -7,7 +7,7 @@ substitutions:
   #
   #
 
-  device_name: dc-tool-sensor         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
+  name: dc-tool-sensor         # **** CHANGE DEVICE NAME TO SOMETHING UNIQUE PER DEVICE.  RENAME YAML FILE TO SAME NAME.    ****
                                # **** USE DASHES (-) INSTEAD OF SPACES OR UNDERSCORE (_).  USE ONLY LOWER CASE LETTERS.     ****
 
   friendly_name: Dust Collector Tool Sensor     # **** CHANGE FRIENDLY NAME TO SOMETHING UNIQUE PER DEVICE ****
@@ -19,7 +19,7 @@ substitutions:
   project_ver_num: "1.0.0"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml@main
+  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml@v1
   
   mqtt_broker: "0.0.0.0"
   mqtt_prefix: "buzzkc/dc" 
@@ -40,7 +40,7 @@ esp8266:
 # https://esphome.io/components/esphome.html
 esphome:
 
-  name: $device_name
+  name: $name
   friendly_name: $friendly_name
   # Automatically add the mac address to the name
   # so you can use a single firmware for all devices
