--- a/s31-tool-update.yaml
+++ b/s31-tool-update.yaml
@@ -1,10 +1,13 @@
 # Git repo examples as a mapping
 packages:
   # shorthand form github://username/repository/[folder/]file-path.yml[@branch-or-tag]
-  remote_package_shorthand: github://buzzkc/docker-dust-collection/s31-tool-update.yaml@main
+  #remote_package_shorthand: github://buzzkc/docker-dust-collection/s31-tool-update.yaml@main
 
   remote_package_files:
     url: https://github.com/buzzkc/docker-dust-collection
-    files: [dc-s31-tool-sensor.yaml]  # optional; if not specified, all files will be included
+    files: 
+      - path: dc-s31-tool-sensor.yaml
+        vars:
+          device_name: ${name} #override with current sensors name
     ref: main  # optional
     refresh: 1d  # optional
